--- a/plotapp/templates/plotapp/base.html
+++ b/plotapp/templates/plotapp/base.html
@@ -69,7 +69,8 @@
         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="menuDropdown"
             style="background-color: #003366; border-radius: 0;">
             
-          <li><a class="dropdown-item text-white" href="{% url 'all_results' %}">All results</a></li>
+            <li><a class="dropdown-item text-white" href="{% url 'all_results' %}">All results</a></li>
+            <li><a class="dropdown-item text-white" href="{% url 'upload' %}">Upload new file</a></li>
 
         </ul>
       </li>
